--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   # For file operations
   path_provider: ^2.1.1
   lucide_icons: ^0.257.0
+  #Firebase Auth Integration
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
 
 dev_dependencies:
   flutter_test:
