--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
   firebase_storage: ^12.4.6
+  #i For image uploads
+  mime: ^1.0.4
 
 
 dev_dependencies:
